--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -5,7 +5,8 @@
 
 .number-label {
   min-width: 33px;
-  font-family: 'Noto Sans Mono';
+  /*font-family: 'Noto Sans Mono';*/
+  font-family: 'Droid Sans Mono';
   font-weight: bold;
   font-size: 20px;
   text-align: right;
